fix(bdd): corrections noms de colonne

--- a/Back/composer.json
+++ b/Back/composer.json
@@ -12,13 +12,15 @@
         "slim/psr7": "^1.2",
         "tuupola/slim-jwt-auth": "^3.5",
         "vlucas/phpdotenv": "^5.2",
-        "doctrine/orm": "^2.*",
+        "doctrine/orm": "^2.8.1",
         "symfony/yaml": "*"
     },
     "autoload": {
+        "psr-0": {
+            "": "src/"
+        },
         "psr-4": {
             "App\\": "app/"
-        },
-        "classmap": ["App\\Models"]
+        }
     }
 }
